[package]
name = "img-compressor"
version = "0.1.0"
description = "Image Compressor Desktop App"
authors = []
edition = "2021"

[lib]
name = "img_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png"] }
oxipng = { version = "9", default-features = false, features = ["filetime", "parallel", "zopfli"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
